# OpencvSocket

./: README.md  socket_opencv.py
SockerOpencvWin/: SockerOpencvWin.cpp  opencv_release.props
SocketOpencvLinux/: CMakeLists.txt  main.cpp
